--- a/april/templates/april/contacthelp.html
+++ b/april/templates/april/contacthelp.html
@@ -5,7 +5,7 @@
     <link href="{% static 'css/home.css' %}" rel="stylesheet" />
     {% load static %}
     <link href="{% static 'css/contacthelp.css' %}" rel="stylesheet" />
-    <title>Contact us</title>
+    <title>Asearch - Contact us</title>
 {% endblock %}
 
 {% block content %}
