--- a/april/templates/april/faqhelp.html
+++ b/april/templates/april/faqhelp.html
@@ -5,7 +5,7 @@
     <link href="{% static 'css/faqhelp.css' %}" rel="stylesheet" />
     {% load static %}
     <link href="{% static 'css/home.css' %}" rel="stylesheet" />
-    <title>Advanced Search</title>
+    <title>Asearch - Advanced Search</title>
 {% endblock %}
 
 {% block content %}
