--- a/april/templates/april/about.html
+++ b/april/templates/april/about.html
@@ -5,7 +5,7 @@
     <link href="{% static 'css/styles.css' %}" rel="stylesheet" />
     {% load static %}
     <link href="{% static 'css/home.css' %}" rel="stylesheet" />
-    <title>About us</title>
+    <title>Asearch - About us</title>
 {% endblock %}
 
 {% block content %}
