--- a/april/templates/april/css/home2.css
+++ b/april/templates/april/css/home2.css
@@ -78,6 +78,7 @@
 
 body {
   margin: 0;
+
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
   font-weight: var(--bs-body-font-weight);
@@ -87,10 +88,9 @@ body {
   background-color: var(--bs-body-bg);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-   background: url("../img/back02.jpeg") no-repeat ;
+  background: url("../img/back02.jpeg") ;
    background-size: 100%
 }
-
 
 hr {
   margin: 1rem 0;
@@ -9502,18 +9502,13 @@ header.masthead h1, header.masthead .h1 {
     font-size: 3rem;
   }
 }
-.showcase{
-  margin-top: 50px;
-  padding-top: 50px;
-  padding-bottom: 50px;
 
-}
 .showcase .showcase-text {
   padding: 3rem;
 }
 .showcase .showcase-img {
   min-height: 30rem;
-
+  background-size: cover;
 }
 @media (min-width: 768px) {
   .showcase .showcase-text {
@@ -9552,12 +9547,6 @@ header.masthead h1, header.masthead .h1 {
   opacity: 0.5;
 }
 
-
-.helpimg{
-  margin-top: 70px;
-  font-size: 500px;
-
-}
 footer.footer {
   background-color: rgb(77, 15, 47);
   padding-top: 1.5rem;
