--- a/april/templates/april/home.html
+++ b/april/templates/april/home.html
@@ -5,7 +5,7 @@
     <script src="{% static 'jscript.js' %}"></script>
     {% load static %}
     <link href="{% static 'css/home.css' %}" rel="stylesheet" />
-    <title>Advanced Search</title>
+    <title>Asearch - Advanced Search</title>
 {% endblock %}
 
 {% block content %}
@@ -20,8 +20,8 @@
                             {% csrf_token %}
                             <div class="row">
                                 <div class="col">
-                                    <td><input class="form-control form-control-lg" id="name" name="name" type="text" placeholder="Name" data-sb-validations="required,email" /></td>
-                                    <td><input style="margin-top: 20px;" class="form-control form-control-lg" id="lastname" name="lastname" type="text" placeholder="Surname" data-sb-validations="required,email" /></td>
+                                    <td><input class="form-control form-control-lg" id="name" name="name" type="text" required="required" pattern="[a-zA-Z]*" placeholder="Name" data-sb-validations="required,email" /></td>
+                                    <td><input style="margin-top: 20px;" class="form-control form-control-lg" id="lastname" required="required" pattern="[a-zA-Z]*" name="lastname" type="text" placeholder="Surname" data-sb-validations="required,email" /></td>
                                     <div class="col-auto">
                                         <button style="margin-top: 20px; margin-right: -500px;" class="btn btn-primary btn-lg" id="searchButton" type="submit" onclick="makeSearch()">Search</button>
                                     </div>
