--- a/april/templates/april/base.html
+++ b/april/templates/april/base.html
@@ -50,26 +50,26 @@
             <div class="row">
                 <div class="col-lg-6 h-100 text-center text-lg-start my-auto">
                     <ul class="list-inline mb-2">
-                        <li class="list-inline-item"><a  href="/">Home</a></li>
+                        <li class="list-inline-item"><a class="flink"  href="/">Home</a></li>
                         <li class="list-inline-item">⋅</li>
-                        <li class="list-inline-item"><a href="/about">About</a></li>
+                        <li class="list-inline-item"><a class="flink"  href="/about">About</a></li>
                         <li class="list-inline-item">⋅</li>
-                        <li class="list-inline-item"><a  href="/contact">Contact</a></li>
+                        <li class="list-inline-item"><a class="flink"  href="/contact">Contact</a></li>
                         <li class="list-inline-item">⋅</li>
-                        <li class="list-inline-item"><a  href="/faq">FAQ</a></li>
+                        <li class="list-inline-item"><a class="flink"  href="/faq">FAQ</a></li>
                     </ul>
                     <p class="text-muted small mb-4 mb-lg-0">&copy; Team "April" 2022</p>
                 </div>
                 <div class="col-lg-6 h-100 text-center text-lg-end my-auto">
                     <ul class="list-inline mb-0">
                         <li class="list-inline-item me-4">
-                            <a  href="mailto:180103070@stu.sdu.edu.kz"><i class="bi bi-google"></i></a>
+                            <a class="flink"  href="mailto:180103070@stu.sdu.edu.kz"><i class="bi bi-google"></i></a>
                         </li>
                         <li class="list-inline-item me-4">
-                            <a  href="https://t.me/April_team"><i class="bi bi-telegram"></i></a>
+                            <a class="flink"  href="https://t.me/April_team"><i class="bi bi-telegram"></i></a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="tel:+77006841165"><i class="bi-telephone-fill"></i></a>
+                            <a class="flink"  href="tel:+77006841165"><i class="bi-telephone-fill"></i></a>
                         </li>
                     </ul>
                 </div>
