--- a/april/templates/april/css/home.css
+++ b/april/templates/april/css/home.css
@@ -2047,11 +2047,11 @@ progress {
   cursor: pointer;
 }
 .form-control:focus {
-  color: #212529;
+  color: rgb(255,192,203);
   background-color: #fff;
-  border-color: #86b7fe;
+  border-color: rgb(255,192,203);
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  box-shadow: 0 0 0 0.25rem rgb(255,192,203);
 }
 .form-control::-webkit-date-and-time-value {
   height: 1.5em;
@@ -2335,7 +2335,7 @@ textarea.form-control-lg {
 .form-check-input:focus {
   border-color: #86b7fe;
   outline: 0;
-  box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+  box-shadow: 0 0 0 0.25rem rgb(255,192,203);
 }
 .form-check-input:checked {
   background-color: #0d6efd;
