--- a/april/templates/april/css/notfound.css
+++ b/april/templates/april/css/notfound.css
@@ -102,7 +102,10 @@ h2{
 
 .text{
   color: #424949;
-  font-size: 1rem;
+  font-size: 1.5rem;
+}
+.tbl{
+  margin-left: 450px;
 }
 section{
   padding-top: 20px;
